Provided the ability to collapse the sample attributes and factors. Fixed problem with the units not being assigned to their respective values.

--- a/web/src/main/webapp/stylesheet/global.css
+++ b/web/src/main/webapp/stylesheet/global.css
@@ -45,6 +45,116 @@ body {
     line-height: 1;
 }
 
+#factors {
+    border-collapse: collapse;
+}
+
+#factors h4 {
+    margin: 0px;
+    padding: 0px;
+}
+
+#factors img {
+    float: right;
+}
+
+#factors ul {
+    margin: 10px 0 10px 40px;
+    padding: 0px;
+}
+
+#factors td {
+    background: #fff none repeat-x scroll center left;
+    color: #333333;
+    padding: 6px 10px;
+}
+
+#factors tr.odd td {
+    background: #F1F2F2;
+    cursor: pointer;
+}
+
+#factors div.arrow {
+    background: transparent url(../img/table_images/arrows.png) no-repeat scroll 0px -16px;
+    width: 21px;
+    height: 16px;
+    display: block;
+}
+
+#factors div.up {
+    background-position: 0px 0px;
+}
+
+#characteristics {
+    border-collapse: collapse;
+}
+
+#characteristics h4 {
+    margin: 0px;
+    padding: 0px;
+}
+
+#characteristics img {
+    float: right;
+}
+
+#characteristics ul {
+    margin: 10px 0 10px 40px;
+    padding: 0px;
+}
+
+#characteristics td {
+    background: #fff none repeat-x scroll center left;
+    color: #333333;
+    padding: 6px 10px;
+}
+
+#characteristics tr.odd td {
+    background: #F1F2F2;
+    cursor: pointer;
+}
+
+#characteristics div.arrow {
+    background: transparent url(../img/table_images/arrows.png) no-repeat scroll 0px -16px;
+    width: 21px;
+    height: 16px;
+    display: block;
+}
+
+#characteristics div.up {
+    background-position: 0px 0px;
+}
+
+.green-tag {
+    padding: 3px 5px;
+    -webkit-border-radius: 3px 3px;
+    border: solid 1px rgb(140, 198, 63);
+    background: rgb(140, 198, 63);
+    margin-right: 1px;
+    color: #fff;
+    text-decoration: none;
+    display: inline-block;
+    text-align: center;
+    line-height: 1;
+}
+
+.subtable_title {
+    font-family: Arial, Myriad Pro, sans-serif;
+    font-weight: bold;
+    font-size: 12px;
+    vertical-align: top;
+    text-align: left;
+}
+
+.subtable_value_count {
+    font-family: Arial, Myriad Pro, sans-serif;
+    font-weight: bold;
+    color: #666;
+    font-size: 10px;
+    vertical-align: top;
+    text-align: left;
+}
+
 .section {
     padding: 3px 5px;
     -webkit-border-radius: 3px 3px;
